--- a/style.css
+++ b/style.css
@@ -57,14 +57,14 @@
       justify-content: center;
       align-items: center;
       align-self: center;
-      background-color: hsl(0, 0%, 100%);
+      background-color: hsl(20, 50%, 98%);
       color: hsl(0, 0%, 0%);
-      padding: 10px;
+      padding: 5px;
       border: 1.5px solid hsl(7, 20%, 60%);
       border-radius: 16px;
       cursor: pointer;
       width: 150px; 
-      height: 30px;
+      height: auto;
       transition: background-color 0.4s, color 0.4s;
       position: relative;
       top: -15px;
@@ -156,9 +156,9 @@
 
     h2{
       color: hsl(14, 86%, 42%);
-      position: relative;
-      left: -85px;
-      margin-bottom: -1px;
+      margin-bottom: -20px;
+      text-align: start;
+      padding: 10px;
     }
 
     h3{
@@ -180,6 +180,7 @@
       position: relative;
       left: -20px;
       margin-bottom: -20px;
+      margin: 1px;
     }
 
     hr{
@@ -190,20 +191,23 @@
       margin-top: -5px;
     }
 
-    #botao-x {
-      width: 10px;
-      padding: 3px;
+    .remove-button {
+      padding: 4px;
       display: flex;
       position: relative;
       left: 290px;
       top: -25px;
       border-radius: 20px;
-      border: 2px solid hsl(0, 1%, 64%);
+      background-color: hsl(0, 0%, 100%);
+      border: 2px solid hsl(0, 0%, 69%);
     }
-
-    #botao-x:hover {
+    .remove-button:hover {
       border: 2px solid hsl(0, 100%, 49%);
       background-color: hsl(0, 0%, 100%);
+    }
+
+    ul{
+      list-style: none;
     }
 
     .carbon{
@@ -214,28 +218,26 @@
       width: 90%;
       height: 40px;
       border-radius: 8px;
-      gap: 5px;
+      gap: 3px;
       margin-left: 20px;
       font-size: 14px;
+      margin: 15px;
     }
 
     .total{
-      margin: 20px;
+      background-color: hsl(0, 0%, 100%);
+      display: inline;
     }
 
     .order{
-      display: inline;
-      position: relative;
-      right: 75px;
       font-size: 14px;
+      display: inline;
     }
 
     h4{
       color: hsl(0, 0%, 0%);
-      display: inline;
-      position: relative;
-      left: 80px;
       font-size: 22px;
+      display: inline;
     }
 
     .name{
@@ -274,3 +276,23 @@
     .confirm:hover{
       background-color: hsl(14, 64%, 58%);
     }
+
+    /*dialogo*/
+    dialog::backdrop {
+      background: rgba(0, 0, 0, 0.5);
+    }
+    
+    dialog {
+      border: none;
+      border-radius: 8px;
+      padding: 20px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+    
+    menu {
+      display: flex;
+      justify-content: flex-end;
+      gap: 10px;
+      margin-top: 20px;
+    }
+    
