--- a/style.css
+++ b/style.css
@@ -36,13 +36,14 @@
     .conteiner {
       display: flex;
       flex-direction: column;
-      width: 200px;
-      height: auto;
+      height: 100%;
+      width: 100%;
+      background-color: aquamarine;
     }
 
     .conteiner img {
-      height: 200px;
-      width: 200px;
+      height: auto;
+      width: 100%;
       border: 2px solid hsl(20, 50%, 98%);
       border-radius: 8px;
     }
@@ -184,23 +185,24 @@
     }
 
     hr{
-      border-color: transparent solid 1px;
-      background-color: hsl(0, 0%, 47%);
+      border-color: transparent 0.1px;
+      background-color: hsl(13, 31%, 94%);
       border-radius: 0px;
       width: 100%;
-      margin-top: -5px;
+      margin: -3px 0;
     }
 
     .remove-button {
       padding: 4px;
       display: flex;
       position: relative;
-      left: 290px;
+      left: 285px;
       top: -25px;
       border-radius: 20px;
       background-color: hsl(0, 0%, 100%);
-      border: 2px solid hsl(0, 0%, 69%);
+      border: 2px solid hsl(0, 15%, 86%);
     }
+
     .remove-button:hover {
       border: 2px solid hsl(0, 100%, 49%);
       background-color: hsl(0, 0%, 100%);
@@ -208,6 +210,15 @@
 
     ul{
       list-style: none;
+    }
+    
+    .total {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      position: static;
+      margin: -15px -25px;
     }
 
     .carbon{
@@ -218,20 +229,13 @@
       width: 90%;
       height: 40px;
       border-radius: 8px;
-      gap: 3px;
       margin-left: 20px;
-      font-size: 14px;
-      margin: 15px;
     }
-
-    .total{
-      background-color: hsl(0, 0%, 100%);
-      display: inline;
-    }
-
+    
     .order{
       font-size: 14px;
       display: inline;
+      margin-left: 50px;
     }
 
     h4{
@@ -285,14 +289,104 @@
     dialog {
       border: none;
       border-radius: 8px;
-      padding: 20px;
+      max-height: auto;
+      width: 40%;
+      padding: 30px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h5{
+      font-size: 32px;
+      margin: 20px 0px 10px 0px;
+      color: hsl(0, 0%, 0%);
+    }
+
+    h6{
+      font-size: 14px;
+      margin: 1px 0px 20px 0px;
+      color: hsl(14, 25%, 72%);
+    }
+
+    .card-list2{
+      background-color: hsl(20, 50%, 98%);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: left;
+      border-radius: 20px;
+      padding-left: 10px;
+    }
+
+    .product-image {
+      width: 30px;
+      height: 30px;
+      position: relative;
+      left: -30px;
+      top: 25px;
+    }
+
+    .name2{
+      color: hsl(0, 0%, 0%);
+      font-size: 14px;
+    }
+
+    .quantidade2{
+      color: hsl(14, 86%, 42%);
+      font-size: 12px;
+     
+      margin-right: 10px;
+    }
+
+    .price2{
+      color: hsl(7, 20%, 60%);
+      font-size: 12px;
+      
+    }
+   
+    .linha{
+      border-color: transparent 1px;
+      background-color: hsl(15, 100%, 99%);
+      border-radius: 0px;
+      width: 100%;
+      margin: 10px -20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: start;
+      align-items: start;
     }
     
     menu {
       display: flex;
       justify-content: flex-end;
-      gap: 10px;
-      margin-top: 20px;
     }
-    
+
+    @media(max-width: 768px){
+      body{
+        margin: 30px;
+        width: 60vh;
+      }
+
+      @media (max-width: 768px) {
+        .main-container {
+          flex-direction: column;
+          align-items: center;
+        }
+      
+        .grid-conteiner {
+          grid-template-columns: repeat(2, 1fr); /* Reduz para duas colunas */
+        }
+      
+        .card {
+          position: static; /* Remove o posicionamento absoluto */
+          width: 100%; /* Ocupa a largura total */
+          margin-top: 20px; /* Adiciona um espaçamento */
+        }
+      }
+      
+      @media (max-width: 480px) {
+        .grid-conteiner {
+          grid-template-columns: 1fr; /* Exibe os itens em uma única coluna */
+        }
+      }
+      
+    }
