--- a/style.css
+++ b/style.css
@@ -307,40 +307,59 @@
       color: hsl(14, 25%, 72%);
     }
 
+    li, .product-image{
+      margin-top: -20px;
+    }
+
     .card-list2{
       background-color: hsl(20, 50%, 98%);
       display: flex;
       flex-direction: column;
       justify-content: center;
-      text-align: left;
+      text-align: center;
       border-radius: 20px;
-      padding-left: 10px;
     }
 
     .product-image {
-      width: 30px;
-      height: 30px;
+      width: 40px;
+      height: 40px;
       position: relative;
-      left: -30px;
-      top: 25px;
+      right: 211px;
+      top: 60px;
+      padding: 10px;
     }
 
     .name2{
       color: hsl(0, 0%, 0%);
-      font-size: 14px;
+      font-size: 14px; 
+      position: relative;
+      left: 45px;
+      text-align: left;
     }
 
     .quantidade2{
       color: hsl(14, 86%, 42%);
       font-size: 12px;
-     
+      display: inline;
       margin-right: 10px;
+      position: relative;
+      right: 118px;
     }
 
     .price2{
       color: hsl(7, 20%, 60%);
       font-size: 12px;
-      
+      display: inline;
+      position: relative;
+      right: 115px;
+    }
+    
+    .totalprice{
+      display: inline;
+      color: hsl(0, 0%, 0%);
+      text-align: center;
+      position: relative;
+      left: 140px;
     }
    
     .linha{
